added basic floats

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,8 +11,27 @@ White #FFFFFF
 }
 
 *{
-  margin:0;
-  
+  margin:0; 
+}
+li{
+  list-style-type:none;
+}
+nav li {
+  color:#FFFFFF;
+  cursor: pointer;
+  text-decoration: none;
+}
+li:visited{
+  color:#FFFFFF;
+  list-style-type:none;
+}
+.List {
+  float:right;
+  width:50%;
+}
+.form {
+  float:left;
+  width:50%;
 }
 header {
   color:#FFFFFF;
